packages/navigation/src/components/less/NavigationItem.less
@import '~@atlaskit/util-shared-styles/src/colors.less';
@import '~@atlaskit/util-shared-styles/src/fonts.less';
@import '~@atlaskit/util-shared-styles/src/grid.less';
@import '~@atlaskit/util-shared-styles/src/mixins/focus-ring.less';
@import '../../shared-variables.less';

@icon-size: @ak-grid-size * 3;
@icon-offset-left: @ak-grid-size * 3.5;
@icon-open-padding: 0 (@ak-grid-size * 2) 0 (@icon-offset-left - @ak-grid-size * 2);
@icon-closed-horizontal-padding: (@container-closed-width - (@ak-grid-size * 4) - @icon-size) / 2;
@icon-closed-padding: 0 @icon-closed-horizontal-padding 0 @icon-closed-horizontal-padding;
@sub-text-size: unit(12px / @ak-font-size-default, em);
@sub-text-line-height: unit(16px / @ak-font-size-default, em);
@compact-sub-text-size: 10px;
@compact-sub-text-line-height: 12px;

@border-radius: 3px;

.hide-when-closed() {
  [data-__ak-navigation-container-closed="true"] & {
    opacity: 0;
  }
}

.navigationItemOuter {
  width: 100%;
  height: @ak-grid-size * 5;
  box-sizing: border-box;
  text-overflow: ellipsis;
  position: relative;

  .isSelected {
    padding: 0;
  }

  &:hover &.isSelected {
    padding: 0;
  }

  a, a:hover, a:visited {
    color: inherit;
    text-decoration: none;
  }
}

.isCompact .icon {
  padding-left: 0;
  padding-right: @ak-grid-size;
}

.navigationItemInner {
  height: 100%;
  width: 100%;
  padding: 0 @ak-grid-size;
  display: flex;
  align-items: center;
  box-sizing: border-box;
}

.isCompact {
  height: @ak-grid-size * 4.5;

  .subText {
    font-size: @compact-sub-text-size;
    line-height: @compact-sub-text-line-height;
  }
}

.link:focus {
  .focus-ring();
  display: block;
  height: 100%;
  border-radius: @border-radius;
}

.action {
  .hide-when-closed();

  display: flex;
  height: 100%;
  justify-content: center;
  position: absolute;
  right: @ak-grid-size;
  top: 0;
}

.icon {
  transition: padding 200ms;
  padding: @icon-open-padding;
  display: flex;
  flex-shrink: 0;

  [data-__ak-navigation-container-closed="true"] & {
    padding: @icon-closed-padding;
  }

  & > * {
    flex: 1 0 auto;
    height: @icon-size;
    width: @icon-size;
  }
}

.after {
  min-width: @ak-grid-size * 3;
}

.text {
  .hide-when-closed();
  overflow-x: hidden;
  display: inline-block;
  flex-grow: 1;

  &.hasTextAfterOrAction {
    margin-right: @ak-grid-size * 3;
  }
}

.mainText {
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.subText {
  color: @ak-color-N90;
  font-size: @sub-text-size;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.textAfter {
  .hide-when-closed();

  position: relative;
  z-index: 1;
}

